--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -196,7 +196,7 @@ govuk_jenkins::jobs::search_fetch_analytics_data::skip_page_traffic_load: true
 govuk_jenkins::jobs::search_fetch_analytics_data::cron_schedule: '30 8 * * 1-5'
 
 govuk_jenkins::jobs::search_relevancy_rank_evaluation::cron_schedule: '45 */3 * * *' # every three hours
-govuk_jenkins::jobs::search_google_analytics_etl::cron_schedule: 'H */6 * * *' # every six hours
+govuk_jenkins::jobs::search_google_analytics_etl::cron_schedule: 'H 1,7,13,19 * * *' # every six hours
 
 govuk_jenkins::jobs::smokey::environment: staging_aws
 
