Enable email-alert-api/service app dashboards in AWS Grafana.
email-alert-api and email-alert-service are in AWS in Staging now and
are Prod is expected to move in the coming weeks. Enable the app
dashboards in AWS so that we can continue to use them during and after
the transition.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1018,6 +1018,10 @@ grafana::dashboards::application_dashboards:
       - smartanswers
       - whitehall-frontend
   email-alert-frontend: {}
+  email-alert-api:
+    show_sidekiq_graphs: true
+    has_workers: true
+  email-alert-service: {}
   feedback: {}
   finder-frontend:
     show_external_request_time: true
