--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1053,6 +1053,11 @@ grafana::dashboards::application_dashboards:
     # No data in kibana
     show_controller_errors: false
     show_slow_requests: false
+  publishing-api:
+    show_sidekiq_graphs: true
+    has_workers: true
+    instance_prefix: 'publishing_api'
+    show_memcached: true
   router: {}
   router-api: {}
   search-api:
