--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -332,6 +332,7 @@ monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::pingdom::enable: false
 monitoring::checks::ses::region: 'eu-west-1'
 monitoring::checks::rds::region: 'eu-west-1'
+monitoring::checks::aws_iam_key::enabled: true
 monitoring::checks::aws_iam_key::region: 'eu-west-1'
 
 monitoring::checks::lb::region: 'eu-west-1'
