--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -334,6 +334,7 @@ monitoring::checks::ses::region: 'eu-west-1'
 monitoring::checks::rds::region: 'eu-west-1'
 monitoring::checks::aws_iam_key::enabled: true
 monitoring::checks::aws_iam_key::region: 'eu-west-1'
+monitoring::checks::aws_iam_key::max_aws_iam_key_age: 320
 
 monitoring::checks::lb::region: 'eu-west-1'
 monitoring::checks::lb::loadbalancers:
