Add a new user for Issy
- I'm switching away from my full name everywhere it's possible to.
- I tried to this in #9915 with my existing user, but the linter didn't
  like having the username different from the email address, and
  apparently it's impossible to change username without adding/removing.
- The removal of "isabelllong" will come in the next few days once this
  has deployed.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -194,6 +194,7 @@ users::usernames:
   - huwdiprose
   - ianjames
   - isabelllong
+  - issylong
   - jessicajones
   - jonathanhallam
   - jonathonshire
