--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -176,6 +176,7 @@ users::usernames:
   - felisialoukou
   - ianjames
   - isabelllong
+  - issylong
   - jessicajones
   - jonathanhallam
   - joskoetsier
