--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -463,6 +463,7 @@ users::usernames:
   - huwdiprose
   - ianjames
   - isabelllong
+  - issylong
   - jessicajones
   - jonathanhallam
   - jonathonshire
