--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1021,7 +1021,10 @@ grafana::dashboards::application_dashboards:
   email-alert-service: {}
   feedback: {}
   finder-frontend:
-    show_external_request_time: true
+    rows:
+      - - content_store_request_time
+        - registry_request_time
+        - search_api_request_time
     show_memcached: true
     instance_prefix: 'calculators_frontend'
   frontend: {}
@@ -1059,6 +1062,9 @@ grafana::dashboards::application_dashboards:
   router-api: {}
   search-api:
     # search-api is a sinatra app
+    rows:
+      - - reranker_latency_vs_request_count
+      - - reranker_errors
     show_controller_errors: false
     show_response_times: true
     show_sidekiq_graphs: true
