--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -228,7 +228,10 @@ grafana::dashboards::application_dashboards:
   email-alert-service: {}
   feedback: {}
   finder-frontend:
-    show_external_request_time: true
+    rows:
+      - - content_store_request_time
+        - registry_request_time
+        - search_api_request_time
     show_memcached: true
     instance_prefix: 'calculators_frontend'
   frontend: {}
