--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -233,6 +233,14 @@ hosts::production::backend::hosts:
     ip: '10.2.3.50'
   redis-2:
     ip: '10.2.3.51'
+  whitehall-backend-1:
+    ip: '10.2.3.25'
+  whitehall-backend-2:
+    ip: '10.2.3.26'
+  whitehall-backend-3:
+    ip: '10.2.3.27'
+  whitehall-backend-4:
+    ip: '10.2.3.28'
   whitehall-mysql-backup-1:
     ip: '10.2.3.34'
     legacy_aliases:
@@ -273,6 +281,12 @@ hosts::production::backend::app_hostnames:
   - 'travel-advice-publisher'
 
 hosts::production::frontend::hosts:
+  whitehall-frontend-1:
+    ip: '10.2.2.5'
+  whitehall-frontend-2:
+    ip: '10.2.2.6'
+  whitehall-frontend-3:
+    ip: '10.2.2.10'
   frontend-lb-1:
     ip: '10.2.2.101'
   frontend-lb-2:
