--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -260,6 +260,7 @@ hosts::production::backend::hosts:
     ip: '10.2.11.31'
 
 hosts::production::backend::app_hostnames:
+  - 'asset-manager'
   - 'canary-backend'
   - 'collections-publisher'
   - 'contacts-admin'
@@ -279,6 +280,7 @@ hosts::production::backend::app_hostnames:
   - 'specialist-publisher-rebuild'
   - 'specialist-publisher-rebuild-standalone'
   - 'travel-advice-publisher'
+  - 'whitehall-admin'
 
 hosts::production::frontend::hosts:
   whitehall-frontend-1:
