--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -116,6 +116,7 @@ govuk_cdnlogs::bouncer_monitoring_enabled: false
 govuk_jenkins::job_builder::environment: 'integration'
 govuk_jenkins::config::executors: '8'
 
+govuk_jenkins::jobs::athena_fastly_logs_check::s3_results_bucket: 'govuk-integration-fastly-logs-monitoring'
 govuk_jenkins::jobs::content_data_api::rake_etl_master_process_cron_schedule: '0 13 * * *'
 
 govuk_jenkins::jobs::content_publisher_whitehall_import::enable_slack_notifications: true
