--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -94,6 +94,17 @@ govuk_env_sync::tasks:
     hour: "1"
     minute: "45"
     database: "licensify-audit"
+  "push_release_production_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "16"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "release_production"
+    temppath: "/home/govuk-backup/tmp_dumps/release_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
   # The pull_*_production configs below are not run automatically. The
   # ensure:disabled means that they are present on the db_admin machine but
   # without crontab entries. This allows for manual restores when needed.
