--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -338,6 +338,7 @@ monitoring::checks::lb::loadbalancers:
       - backend-collections-publisher
       - backend-contacts-admin
       - backend-content-api
+      - backend-content-audit-tool
       - backend-content-performance-m
       - backend-content-publisher
       - backend-content-tagger
