Create release app dashboard in AWS
The release app is now in AWS, so we need to shift the dashboard over.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1043,6 +1043,7 @@ grafana::dashboards::application_dashboards:
     has_workers: true
     instance_prefix: 'publishing_api'
     show_memcached: true
+  release: {}
   router: {}
   router-api: {}
   search-api:
