Revert "Remove release from the Carrenza hieradata apps list"
It needs to be made absent first.

This reverts commit d92a0c3207a36e24cbb83e37d4c312dfbd36d80b.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -26,6 +26,7 @@ node_class: &node_class
       - manuals-publisher
       - maslow
       - publisher
+      - release
       - search-admin
       - service-manual-publisher
       - short-url-manager
